errors.txt
paulskie@Paulskies-iMac-Pro godot-ios-extensions % ./build.sh ios debug
Building libraries...
Building iOS libraries (debug)...
AVPIdentity: AppleVirtualPlatformHostKey.mm:234: Assert: platformExpert,  value: 0
AVPIdentity: AppleVirtualPlatformHostKey.mm:234: Failed to get AppleVirtualPlatformARMPE service.
/Users/paulskie/Documents/godot-ios-extensions/Sources/Passkey/Passkey.swift:93:1: error: non-'@objc' property 'description' does not satisfy requirement of '@objc' protocol 'NSObjectProtocol'
extension Passkey: ASAuthorizationControllerPresentationContextProviding {
^
/Users/paulskie/Documents/godot-ios-extensions/SwiftGodot/Sources/SwiftGodot/Core/Various.swift:17:16: note: add '@objc' to expose this property to Objective-C
    public var description: String {
               ^
ObjectiveC.NSObjectProtocol:44:9: note: requirement 'description' declared here
    var description: String { get }
        ^
/Users/paulskie/Documents/godot-ios-extensions/Sources/Passkey/Passkey.swift:93:1: error: cannot declare conformance to 'NSObjectProtocol' in Swift; 'Passkey' should inherit 'NSObject' instead
extension Passkey: ASAuthorizationControllerPresentationContextProviding {
^
/Users/paulskie/Documents/godot-ios-extensions/Sources/Passkey/Passkey.swift:93:1: note: add stubs for conformance
extension Passkey: ASAuthorizationControllerPresentationContextProviding {